compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PRINT
    STRING
    VAL_STRING

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM np_program_start ID np_start_dirfunc ; var_opcional func_programa_loop main
Rule 2     np_program_start -> epsilon
Rule 3     np_start_dirfunc -> epsilon
Rule 4     main -> MAIN ( ) { loop_estatuto } np_fin_total
Rule 5     np_fin_total -> epsilon
Rule 6     var_opcional -> var_declaracion
Rule 7     var_opcional -> epsilon
Rule 8     variable -> ID np_single_var_process
Rule 9     var_declaracion -> VARS np_var_prep var_declaracion_mismo_tipo loop_var_declaracion
Rule 10    np_var_prep -> epsilon
Rule 11    loop_var_declaracion -> var_declaracion_mismo_tipo loop_var_declaracion
Rule 12    loop_var_declaracion -> epsilon
Rule 13    var_declaracion_mismo_tipo -> tipo np_set_curr_var_type ID np_set_curr_var_name np_add_var_to_varstable loop_var_decl_mismo_tipo ;
Rule 14    loop_var_decl_mismo_tipo -> , ID np_set_curr_var_name np_add_var_to_varstable loop_var_decl_mismo_tipo
Rule 15    loop_var_decl_mismo_tipo -> epsilon
Rule 16    np_set_curr_var_type -> epsilon
Rule 17    np_set_curr_var_name -> epsilon
Rule 18    np_add_var_to_varstable -> epsilon
Rule 19    func_programa_loop -> func_definicion func_programa_loop
Rule 20    func_programa_loop -> epsilon
Rule 21    func_definicion -> FUNCTION func_tipo_retorno np_func_tipo_retorno ID np_func_id np_add_to_func_dir ( np_prep_func_params func_parametro ) ; var_opcional { loop_estatuto } np_kill_func
Rule 22    func_tipo_retorno -> tipo
Rule 23    func_tipo_retorno -> VOID
Rule 24    np_func_tipo_retorno -> epsilon
Rule 25    np_func_id -> epsilon
Rule 26    np_add_to_func_dir -> epsilon
Rule 27    np_kill_func -> epsilon
Rule 28    np_prep_func_params -> epsilon
Rule 29    func_parametro -> parametro
Rule 30    func_parametro -> epsilon
Rule 31    parametro -> tipo ID loop_parametro
Rule 32    loop_parametro -> , tipo ID loop_parametro
Rule 33    loop_parametro -> epsilon
Rule 34    tipo -> INT
Rule 35    tipo -> FLOAT
Rule 36    tipo -> CHAR
Rule 37    tipo -> BOOL
Rule 38    estatuto -> asignacion
Rule 39    estatuto -> func_llamada ;
Rule 40    estatuto -> read
Rule 41    estatuto -> write
Rule 42    estatuto -> decision
Rule 43    estatuto -> repeticion
Rule 44    estatuto -> func_return
Rule 45    asignacion -> variable = hyper_exp ;
Rule 46    func_llamada -> ID ( )
Rule 47    func_llamada -> ID ( hyper_exp_loop )
Rule 48    hyper_exp_loop -> hyper_exp np_add_to_input_counter hyper_exp_loop_1
Rule 49    hyper_exp_loop_1 -> , hyper_exp np_add_to_input_counter hyper_exp_loop_1
Rule 50    hyper_exp_loop_1 -> epsilon
Rule 51    func_return -> RETURN ( hyper_exp ) ;
Rule 52    read -> READ ( variable_loop ) ;
Rule 53    variable_loop -> variable np_add_to_input_counter variable_loop_1
Rule 54    variable_loop_1 -> , variable np_add_to_input_counter variable_loop_1
Rule 55    variable_loop_1 -> epsilon
Rule 56    np_add_to_input_counter -> epsilon
Rule 57    write -> WRITE ( hyper_exp_loop ) ;
Rule 58    decision -> IF ( hyper_exp ) np_decision_1 THEN { loop_estatuto } decision_else
Rule 59    decision_else -> ELSE np_decision_2 { loop_estatuto }
Rule 60    decision_else -> epsilon
Rule 61    np_decision_1 -> epsilon
Rule 62    np_decision_2 -> epsilon
Rule 63    loop_estatuto -> estatuto loop_estatuto
Rule 64    loop_estatuto -> epsilon
Rule 65    repeticion -> condicional
Rule 66    repeticion -> no_condicional
Rule 67    condicional -> WHILE ( hyper_exp ) DO { loop_estatuto }
Rule 68    no_condicional -> FOR variable = hyper_exp TO hyper_exp DO { loop_estatuto }
Rule 69    hyper_exp -> super_exp hyper_exp_1
Rule 70    hyper_exp_1 -> & np_push_operator_stack super_exp
Rule 71    hyper_exp_1 -> | np_push_operator_stack super_exp
Rule 72    hyper_exp_1 -> epsilon
Rule 73    super_exp -> exp super_exp_1
Rule 74    super_exp_1 -> < np_push_operator_stack exp
Rule 75    super_exp_1 -> > np_push_operator_stack exp
Rule 76    super_exp_1 -> EQUAL_TO np_push_operator_stack exp
Rule 77    super_exp_1 -> NOT_EQUAL_TO np_push_operator_stack exp
Rule 78    super_exp_1 -> epsilon
Rule 79    exp -> term exp_1
Rule 80    exp_1 -> + np_push_operator_stack term
Rule 81    exp_1 -> - np_push_operator_stack term
Rule 82    exp_1 -> epsilon
Rule 83    term -> factor term_1
Rule 84    term_1 -> * np_push_operator_stack factor
Rule 85    term_1 -> / np_push_operator_stack factor
Rule 86    term_1 -> epsilon
Rule 87    np_push_operator_stack -> epsilon
Rule 88    factor -> constant
Rule 89    factor -> variable
Rule 90    factor -> ( hyper_exp )
Rule 91    constant -> VAL_INT np_push_const_int
Rule 92    constant -> VAL_FLOAT np_push_const_float
Rule 93    constant -> VAL_CHAR np_push_const_char
Rule 94    np_push_const_int -> epsilon
Rule 95    np_push_const_float -> epsilon
Rule 96    np_push_const_char -> epsilon
Rule 97    np_single_var_process -> epsilon
Rule 98    epsilon -> <empty>

Terminals, with rules where they appear

&                    : 70
(                    : 4 21 46 47 51 52 57 58 67 90
)                    : 4 21 46 47 51 52 57 58 67 90
*                    : 84
+                    : 80
,                    : 14 32 49 54
-                    : 81
/                    : 85
;                    : 1 13 21 39 45 51 52 57
<                    : 74
=                    : 45 68
>                    : 75
BOOL                 : 37
CHAR                 : 36
DO                   : 67 68
ELSE                 : 59
EQUAL_TO             : 76
FLOAT                : 35
FOR                  : 68
FUNCTION             : 21
ID                   : 1 8 13 14 21 31 32 46 47
IF                   : 58
INT                  : 34
MAIN                 : 4
NOT_EQUAL_TO         : 77
PRINT                : 
PROGRAM              : 1
READ                 : 52
RETURN               : 51
STRING               : 
THEN                 : 58
TO                   : 68
VAL_CHAR             : 93
VAL_FLOAT            : 92
VAL_INT              : 91
VAL_STRING           : 
VARS                 : 9
VOID                 : 23
WHILE                : 67
WRITE                : 57
error                : 
{                    : 4 21 58 59 67 68
|                    : 71
}                    : 4 21 58 59 67 68

Nonterminals, with rules where they appear

asignacion           : 38
condicional          : 65
constant             : 88
decision             : 42
decision_else        : 58
epsilon              : 2 3 5 7 10 12 15 16 17 18 20 24 25 26 27 28 30 33 50 55 56 60 61 62 64 72 78 82 86 87 94 95 96 97
estatuto             : 63
exp                  : 73 74 75 76 77
exp_1                : 79
factor               : 83 84 85
func_definicion      : 19
func_llamada         : 39
func_parametro       : 21
func_programa_loop   : 1 19
func_return          : 44
func_tipo_retorno    : 21
hyper_exp            : 45 48 49 51 58 67 68 68 90
hyper_exp_1          : 69
hyper_exp_loop       : 47 57
hyper_exp_loop_1     : 48 49
loop_estatuto        : 4 21 58 59 63 67 68
loop_parametro       : 31 32
loop_var_decl_mismo_tipo : 13 14
loop_var_declaracion : 9 11
main                 : 1
no_condicional       : 66
np_add_to_func_dir   : 21
np_add_to_input_counter : 48 49 53 54
np_add_var_to_varstable : 13 14
np_decision_1        : 58
np_decision_2        : 59
np_fin_total         : 4
np_func_id           : 21
np_func_tipo_retorno : 21
np_kill_func         : 21
np_prep_func_params  : 21
np_program_start     : 1
np_push_const_char   : 93
np_push_const_float  : 92
np_push_const_int    : 91
np_push_operator_stack : 70 71 74 75 76 77 80 81 84 85
np_set_curr_var_name : 13 14
np_set_curr_var_type : 13
np_single_var_process : 8
np_start_dirfunc     : 1
np_var_prep          : 9
parametro            : 29
programa             : 0
read                 : 40
repeticion           : 43
super_exp            : 69 70 71
super_exp_1          : 73
term                 : 79 80 81
term_1               : 83
tipo                 : 13 22 31 32
var_declaracion      : 6
var_declaracion_mismo_tipo : 9 11
var_opcional         : 1 21
variable             : 45 53 54 68 89
variable_loop        : 52
variable_loop_1      : 53 54
write                : 41

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM np_program_start ID np_start_dirfunc ; var_opcional func_programa_loop main

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . np_program_start ID np_start_dirfunc ; var_opcional func_programa_loop main
    (2) np_program_start -> . epsilon
    (98) epsilon -> .

    ID              reduce using rule 98 (epsilon -> .)

    np_program_start               shift and go to state 3
    epsilon                        shift and go to state 4

state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM np_program_start . ID np_start_dirfunc ; var_opcional func_programa_loop main

    ID              shift and go to state 5


state 4

    (2) np_program_start -> epsilon .

    ID              reduce using rule 2 (np_program_start -> epsilon .)


state 5

    (1) programa -> PROGRAM np_program_start ID . np_start_dirfunc ; var_opcional func_programa_loop main
    (3) np_start_dirfunc -> . epsilon
    (98) epsilon -> .

    ;               reduce using rule 98 (epsilon -> .)

    np_start_dirfunc               shift and go to state 6
    epsilon                        shift and go to state 7

state 6

    (1) programa -> PROGRAM np_program_start ID np_start_dirfunc . ; var_opcional func_programa_loop main

    ;               shift and go to state 8


state 7

    (3) np_start_dirfunc -> epsilon .

    ;               reduce using rule 3 (np_start_dirfunc -> epsilon .)


state 8

    (1) programa -> PROGRAM np_program_start ID np_start_dirfunc ; . var_opcional func_programa_loop main
    (6) var_opcional -> . var_declaracion
    (7) var_opcional -> . epsilon
    (9) var_declaracion -> . VARS np_var_prep var_declaracion_mismo_tipo loop_var_declaracion
    (98) epsilon -> .

    VARS            shift and go to state 9
    FUNCTION        reduce using rule 98 (epsilon -> .)
    MAIN            reduce using rule 98 (epsilon -> .)

    var_declaracion                shift and go to state 10
    epsilon                        shift and go to state 11
    var_opcional                   shift and go to state 12

state 9

    (9) var_declaracion -> VARS . np_var_prep var_declaracion_mismo_tipo loop_var_declaracion
    (10) np_var_prep -> . epsilon
    (98) epsilon -> .

    INT             reduce using rule 98 (epsilon -> .)
    FLOAT           reduce using rule 98 (epsilon -> .)
    CHAR            reduce using rule 98 (epsilon -> .)
    BOOL            reduce using rule 98 (epsilon -> .)

    epsilon                        shift and go to state 13
    np_var_prep                    shift and go to state 14

state 10

    (6) var_opcional -> var_declaracion .

    FUNCTION        reduce using rule 6 (var_opcional -> var_declaracion .)
    MAIN            reduce using rule 6 (var_opcional -> var_declaracion .)
    {               reduce using rule 6 (var_opcional -> var_declaracion .)


state 11

    (7) var_opcional -> epsilon .

    FUNCTION        reduce using rule 7 (var_opcional -> epsilon .)
    MAIN            reduce using rule 7 (var_opcional -> epsilon .)
    {               reduce using rule 7 (var_opcional -> epsilon .)


state 12

    (1) programa -> PROGRAM np_program_start ID np_start_dirfunc ; var_opcional . func_programa_loop main
    (19) func_programa_loop -> . func_definicion func_programa_loop
    (20) func_programa_loop -> . epsilon
    (21) func_definicion -> . FUNCTION func_tipo_retorno np_func_tipo_retorno ID np_func_id np_add_to_func_dir ( np_prep_func_params func_parametro ) ; var_opcional { loop_estatuto } np_kill_func
    (98) epsilon -> .

    FUNCTION        shift and go to state 16
    MAIN            reduce using rule 98 (epsilon -> .)

    func_definicion                shift and go to state 15
    epsilon                        shift and go to state 17
    func_programa_loop             shift and go to state 18

state 13

    (10) np_var_prep -> epsilon .

    INT             reduce using rule 10 (np_var_prep -> epsilon .)
    FLOAT           reduce using rule 10 (np_var_prep -> epsilon .)
    CHAR            reduce using rule 10 (np_var_prep -> epsilon .)
    BOOL            reduce using rule 10 (np_var_prep -> epsilon .)


state 14

    (9) var_declaracion -> VARS np_var_prep . var_declaracion_mismo_tipo loop_var_declaracion
    (13) var_declaracion_mismo_tipo -> . tipo np_set_curr_var_type ID np_set_curr_var_name np_add_var_to_varstable loop_var_decl_mismo_tipo ;
    (34) tipo -> . INT
    (35) tipo -> . FLOAT
    (36) tipo -> . CHAR
    (37) tipo -> . BOOL

    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    BOOL            shift and go to state 24

    tipo                           shift and go to state 19
    var_declaracion_mismo_tipo     shift and go to state 23

state 15

    (19) func_programa_loop -> func_definicion . func_programa_loop
    (19) func_programa_loop -> . func_definicion func_programa_loop
    (20) func_programa_loop -> . epsilon
    (21) func_definicion -> . FUNCTION func_tipo_retorno np_func_tipo_retorno ID np_func_id np_add_to_func_dir ( np_prep_func_params func_parametro ) ; var_opcional { loop_estatuto } np_kill_func
    (98) epsilon -> .

    FUNCTION        shift and go to state 16
    MAIN            reduce using rule 98 (epsilon -> .)

    func_definicion                shift and go to state 15
    epsilon                        shift and go to state 17
    func_programa_loop             shift and go to state 25

state 16

    (21) func_definicion -> FUNCTION . func_tipo_retorno np_func_tipo_retorno ID np_func_id np_add_to_func_dir ( np_prep_func_params func_parametro ) ; var_opcional { loop_estatuto } np_kill_func
    (22) func_tipo_retorno -> . tipo
    (23) func_tipo_retorno -> . VOID
    (34) tipo -> . INT
    (35) tipo -> . FLOAT
    (36) tipo -> . CHAR
    (37) tipo -> . BOOL

    VOID            shift and go to state 26
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    BOOL            shift and go to state 24

    func_tipo_retorno              shift and go to state 28
    tipo                           shift and go to state 27

state 17

    (20) func_programa_loop -> epsilon .

    MAIN            reduce using rule 20 (func_programa_loop -> epsilon .)


state 18

    (1) programa -> PROGRAM np_program_start ID np_start_dirfunc ; var_opcional func_programa_loop . main
    (4) main -> . MAIN ( ) { loop_estatuto } np_fin_total

    MAIN            shift and go to state 29

    main                           shift and go to state 30

state 19

    (13) var_declaracion_mismo_tipo -> tipo . np_set_curr_var_type ID np_set_curr_var_name np_add_var_to_varstable loop_var_decl_mismo_tipo ;
    (16) np_set_curr_var_type -> . epsilon
    (98) epsilon -> .

    ID              reduce using rule 98 (epsilon -> .)

    epsilon                        shift and go to state 31
    np_set_curr_var_type           shift and go to state 32

state 20

    (34) tipo -> INT .

    ID              reduce using rule 34 (tipo -> INT .)


state 21

    (35) tipo -> FLOAT .

    ID              reduce using rule 35 (tipo -> FLOAT .)


state 22

    (36) tipo -> CHAR .

    ID              reduce using rule 36 (tipo -> CHAR .)


state 23

    (9) var_declaracion -> VARS np_var_prep var_declaracion_mismo_tipo . loop_var_declaracion
    (11) loop_var_declaracion -> . var_declaracion_mismo_tipo loop_var_declaracion
    (12) loop_var_declaracion -> . epsilon
    (13) var_declaracion_mismo_tipo -> . tipo np_set_curr_var_type ID np_set_curr_var_name np_add_var_to_varstable loop_var_decl_mismo_tipo ;
    (98) epsilon -> .
    (34) tipo -> . INT
    (35) tipo -> . FLOAT
    (36) tipo -> . CHAR
    (37) tipo -> . BOOL

    FUNCTION        reduce using rule 98 (epsilon -> .)
    MAIN            reduce using rule 98 (epsilon -> .)
    {               reduce using rule 98 (epsilon -> .)
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    BOOL            shift and go to state 24

    tipo                           shift and go to state 19
    epsilon                        shift and go to state 33
    var_declaracion_mismo_tipo     shift and go to state 34
    loop_var_declaracion           shift and go to state 35

state 24

    (37) tipo -> BOOL .

    ID              reduce using rule 37 (tipo -> BOOL .)


state 25

    (19) func_programa_loop -> func_definicion func_programa_loop .

    MAIN            reduce using rule 19 (func_programa_loop -> func_definicion func_programa_loop .)


state 26

    (23) func_tipo_retorno -> VOID .

    ID              reduce using rule 23 (func_tipo_retorno -> VOID .)


state 27

    (22) func_tipo_retorno -> tipo .

    ID              reduce using rule 22 (func_tipo_retorno -> tipo .)


state 28

    (21) func_definicion -> FUNCTION func_tipo_retorno . np_func_tipo_retorno ID np_func_id np_add_to_func_dir ( np_prep_func_params func_parametro ) ; var_opcional { loop_estatuto } np_kill_func
    (24) np_func_tipo_retorno -> . epsilon
    (98) epsilon -> .

    ID              reduce using rule 98 (epsilon -> .)

    epsilon                        shift and go to state 37
    np_func_tipo_retorno           shift and go to state 36

state 29

    (4) main -> MAIN . ( ) { loop_estatuto } np_fin_total

    (               shift and go to state 38


state 30

    (1) programa -> PROGRAM np_program_start ID np_start_dirfunc ; var_opcional func_programa_loop main .

    $end            reduce using rule 1 (programa -> PROGRAM np_program_start ID np_start_dirfunc ; var_opcional func_programa_loop main .)


state 31

    (16) np_set_curr_var_type -> epsilon .

    ID              reduce using rule 16 (np_set_curr_var_type -> epsilon .)


state 32

    (13) var_declaracion_mismo_tipo -> tipo np_set_curr_var_type . ID np_set_curr_var_name np_add_var_to_varstable loop_var_decl_mismo_tipo ;

    ID              shift and go to state 39


state 33

    (12) loop_var_declaracion -> epsilon .

    FUNCTION        reduce using rule 12 (loop_var_declaracion -> epsilon .)
    MAIN            reduce using rule 12 (loop_var_declaracion -> epsilon .)
    {               reduce using rule 12 (loop_var_declaracion -> epsilon .)


state 34

    (11) loop_var_declaracion -> var_declaracion_mismo_tipo . loop_var_declaracion
    (11) loop_var_declaracion -> . var_declaracion_mismo_tipo loop_var_declaracion
    (12) loop_var_declaracion -> . epsilon
    (13) var_declaracion_mismo_tipo -> . tipo np_set_curr_var_type ID np_set_curr_var_name np_add_var_to_varstable loop_var_decl_mismo_tipo ;
    (98) epsilon -> .
    (34) tipo -> . INT
    (35) tipo -> . FLOAT
    (36) tipo -> . CHAR
    (37) tipo -> . BOOL

    FUNCTION        reduce using rule 98 (epsilon -> .)
    MAIN            reduce using rule 98 (epsilon -> .)
    {               reduce using rule 98 (epsilon -> .)
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    BOOL            shift and go to state 24

    tipo                           shift and go to state 19
    epsilon                        shift and go to state 33
    var_declaracion_mismo_tipo     shift and go to state 34
    loop_var_declaracion           shift and go to state 40

state 35

    (9) var_declaracion -> VARS np_var_prep var_declaracion_mismo_tipo loop_var_declaracion .

    FUNCTION        reduce using rule 9 (var_declaracion -> VARS np_var_prep var_declaracion_mismo_tipo loop_var_declaracion .)
    MAIN            reduce using rule 9 (var_declaracion -> VARS np_var_prep var_declaracion_mismo_tipo loop_var_declaracion .)
    {               reduce using rule 9 (var_declaracion -> VARS np_var_prep var_declaracion_mismo_tipo loop_var_declaracion .)


state 36

    (21) func_definicion -> FUNCTION func_tipo_retorno np_func_tipo_retorno . ID np_func_id np_add_to_func_dir ( np_prep_func_params func_parametro ) ; var_opcional { loop_estatuto } np_kill_func

    ID              shift and go to state 41


state 37

    (24) np_func_tipo_retorno -> epsilon .

    ID              reduce using rule 24 (np_func_tipo_retorno -> epsilon .)


state 38

    (4) main -> MAIN ( . ) { loop_estatuto } np_fin_total

    )               shift and go to state 42


state 39

    (13) var_declaracion_mismo_tipo -> tipo np_set_curr_var_type ID . np_set_curr_var_name np_add_var_to_varstable loop_var_decl_mismo_tipo ;
    (17) np_set_curr_var_name -> . epsilon
    (98) epsilon -> .

    ,               reduce using rule 98 (epsilon -> .)
    ;               reduce using rule 98 (epsilon -> .)

    epsilon                        shift and go to state 43
    np_set_curr_var_name           shift and go to state 44

state 40

    (11) loop_var_declaracion -> var_declaracion_mismo_tipo loop_var_declaracion .

    FUNCTION        reduce using rule 11 (loop_var_declaracion -> var_declaracion_mismo_tipo loop_var_declaracion .)
    MAIN            reduce using rule 11 (loop_var_declaracion -> var_declaracion_mismo_tipo loop_var_declaracion .)
    {               reduce using rule 11 (loop_var_declaracion -> var_declaracion_mismo_tipo loop_var_declaracion .)


state 41

    (21) func_definicion -> FUNCTION func_tipo_retorno np_func_tipo_retorno ID . np_func_id np_add_to_func_dir ( np_prep_func_params func_parametro ) ; var_opcional { loop_estatuto } np_kill_func
    (25) np_func_id -> . epsilon
    (98) epsilon -> .

    (               reduce using rule 98 (epsilon -> .)

    epsilon                        shift and go to state 45
    np_func_id                     shift and go to state 46

state 42

    (4) main -> MAIN ( ) . { loop_estatuto } np_fin_total

    {               shift and go to state 47


state 43

    (17) np_set_curr_var_name -> epsilon .

    ,               reduce using rule 17 (np_set_curr_var_name -> epsilon .)
    ;               reduce using rule 17 (np_set_curr_var_name -> epsilon .)


state 44

    (13) var_declaracion_mismo_tipo -> tipo np_set_curr_var_type ID np_set_curr_var_name . np_add_var_to_varstable loop_var_decl_mismo_tipo ;
    (18) np_add_var_to_varstable -> . epsilon
    (98) epsilon -> .

    ,               reduce using rule 98 (epsilon -> .)
    ;               reduce using rule 98 (epsilon -> .)

    np_add_var_to_varstable        shift and go to state 48
    epsilon                        shift and go to state 49

state 45

    (25) np_func_id -> epsilon .

    (               reduce using rule 25 (np_func_id -> epsilon .)


state 46

    (21) func_definicion -> FUNCTION func_tipo_retorno np_func_tipo_retorno ID np_func_id . np_add_to_func_dir ( np_prep_func_params func_parametro ) ; var_opcional { loop_estatuto } np_kill_func
    (26) np_add_to_func_dir -> . epsilon
    (98) epsilon -> .

    (               reduce using rule 98 (epsilon -> .)

    epsilon                        shift and go to state 50
    np_add_to_func_dir             shift and go to state 51

state 47

    (4) main -> MAIN ( ) { . loop_estatuto } np_fin_total
    (63) loop_estatuto -> . estatuto loop_estatuto
    (64) loop_estatuto -> . epsilon
    (38) estatuto -> . asignacion
    (39) estatuto -> . func_llamada ;
    (40) estatuto -> . read
    (41) estatuto -> . write
    (42) estatuto -> . decision
    (43) estatuto -> . repeticion
    (44) estatuto -> . func_return
    (98) epsilon -> .
    (45) asignacion -> . variable = hyper_exp ;
    (46) func_llamada -> . ID ( )
    (47) func_llamada -> . ID ( hyper_exp_loop )
    (52) read -> . READ ( variable_loop ) ;
    (57) write -> . WRITE ( hyper_exp_loop ) ;
    (58) decision -> . IF ( hyper_exp ) np_decision_1 THEN { loop_estatuto } decision_else
    (65) repeticion -> . condicional
    (66) repeticion -> . no_condicional
    (51) func_return -> . RETURN ( hyper_exp ) ;
    (8) variable -> . ID np_single_var_process
    (67) condicional -> . WHILE ( hyper_exp ) DO { loop_estatuto }
    (68) no_condicional -> . FOR variable = hyper_exp TO hyper_exp DO { loop_estatuto }

    }               reduce using rule 98 (epsilon -> .)
    ID              shift and go to state 59
    READ            shift and go to state 53
    WRITE           shift and go to state 66
    IF              shift and go to state 68
    RETURN          shift and go to state 52
    WHILE           shift and go to state 54
    FOR             shift and go to state 62

    asignacion                     shift and go to state 69
    read                           shift and go to state 63
    epsilon                        shift and go to state 64
    decision                       shift and go to state 57
    estatuto                       shift and go to state 58
    write                          shift and go to state 60
    func_return                    shift and go to state 70
    variable                       shift and go to state 67
    func_llamada                   shift and go to state 55
    repeticion                     shift and go to state 71
    loop_estatuto                  shift and go to state 56
    condicional                    shift and go to state 65
    no_condicional                 shift and go to state 61

state 48

    (13) var_declaracion_mismo_tipo -> tipo np_set_curr_var_type ID np_set_curr_var_name np_add_var_to_varstable . loop_var_decl_mismo_tipo ;
    (14) loop_var_decl_mismo_tipo -> . , ID np_set_curr_var_name np_add_var_to_varstable loop_var_decl_mismo_tipo
    (15) loop_var_decl_mismo_tipo -> . epsilon
    (98) epsilon -> .

    ,               shift and go to state 73
    ;               reduce using rule 98 (epsilon -> .)

    epsilon                        shift and go to state 72
    loop_var_decl_mismo_tipo       shift and go to state 74

state 49

    (18) np_add_var_to_varstable -> epsilon .

    ,               reduce using rule 18 (np_add_var_to_varstable -> epsilon .)
    ;               reduce using rule 18 (np_add_var_to_varstable -> epsilon .)


state 50

    (26) np_add_to_func_dir -> epsilon .

    (               reduce using rule 26 (np_add_to_func_dir -> epsilon .)


state 51

    (21) func_definicion -> FUNCTION func_tipo_retorno np_func_tipo_retorno ID np_func_id np_add_to_func_dir . ( np_prep_func_params func_parametro ) ; var_opcional { loop_estatuto } np_kill_func

    (               shift and go to state 75


state 52

    (51) func_return -> RETURN . ( hyper_exp ) ;

    (               shift and go to state 76


state 53

    (52) read -> READ . ( variable_loop ) ;

    (               shift and go to state 77


state 54

    (67) condicional -> WHILE . ( hyper_exp ) DO { loop_estatuto }

    (               shift and go to state 78


state 55

    (39) estatuto -> func_llamada . ;

    ;               shift and go to state 79


state 56

    (4) main -> MAIN ( ) { loop_estatuto . } np_fin_total

    }               shift and go to state 80


state 57

    (42) estatuto -> decision .

    ID              reduce using rule 42 (estatuto -> decision .)
    READ            reduce using rule 42 (estatuto -> decision .)
    WRITE           reduce using rule 42 (estatuto -> decision .)
    IF              reduce using rule 42 (estatuto -> decision .)
    RETURN          reduce using rule 42 (estatuto -> decision .)
    WHILE           reduce using rule 42 (estatuto -> decision .)
    FOR             reduce using rule 42 (estatuto -> decision .)
    }               reduce using rule 42 (estatuto -> decision .)


state 58

    (63) loop_estatuto -> estatuto . loop_estatuto
    (63) loop_estatuto -> . estatuto loop_estatuto
    (64) loop_estatuto -> . epsilon
    (38) estatuto -> . asignacion
    (39) estatuto -> . func_llamada ;
    (40) estatuto -> . read
    (41) estatuto -> . write
    (42) estatuto -> . decision
    (43) estatuto -> . repeticion
    (44) estatuto -> . func_return
    (98) epsilon -> .
    (45) asignacion -> . variable = hyper_exp ;
    (46) func_llamada -> . ID ( )
    (47) func_llamada -> . ID ( hyper_exp_loop )
    (52) read -> . READ ( variable_loop ) ;
    (57) write -> . WRITE ( hyper_exp_loop ) ;
    (58) decision -> . IF ( hyper_exp ) np_decision_1 THEN { loop_estatuto } decision_else
    (65) repeticion -> . condicional
    (66) repeticion -> . no_condicional
    (51) func_return -> . RETURN ( hyper_exp ) ;
    (8) variable -> . ID np_single_var_process
    (67) condicional -> . WHILE ( hyper_exp ) DO { loop_estatuto }
    (68) no_condicional -> . FOR variable = hyper_exp TO hyper_exp DO { loop_estatuto }

    }               reduce using rule 98 (epsilon -> .)
    ID              shift and go to state 59
    READ            shift and go to state 53
    WRITE           shift and go to state 66
    IF              shift and go to state 68
    RETURN          shift and go to state 52
    WHILE           shift and go to state 54
    FOR             shift and go to state 62

    asignacion                     shift and go to state 69
    read                           shift and go to state 63
    epsilon                        shift and go to state 64
    decision                       shift and go to state 57
    estatuto                       shift and go to state 58
    write                          shift and go to state 60
    func_return                    shift and go to state 70
    variable                       shift and go to state 67
    func_llamada                   shift and go to state 55
    repeticion                     shift and go to state 71
    loop_estatuto                  shift and go to state 81
    condicional                    shift and go to state 65
    no_condicional                 shift and go to state 61

state 59

    (46) func_llamada -> ID . ( )
    (47) func_llamada -> ID . ( hyper_exp_loop )
    (8) variable -> ID . np_single_var_process
    (97) np_single_var_process -> . epsilon
    (98) epsilon -> .

    (               shift and go to state 82
    =               reduce using rule 98 (epsilon -> .)

    epsilon                        shift and go to state 84
    np_single_var_process          shift and go to state 83

state 60

    (41) estatuto -> write .

    ID              reduce using rule 41 (estatuto -> write .)
    READ            reduce using rule 41 (estatuto -> write .)
    WRITE           reduce using rule 41 (estatuto -> write .)
    IF              reduce using rule 41 (estatuto -> write .)
    RETURN          reduce using rule 41 (estatuto -> write .)
    WHILE           reduce using rule 41 (estatuto -> write .)
    FOR             reduce using rule 41 (estatuto -> write .)
    }               reduce using rule 41 (estatuto -> write .)


state 61

    (66) repeticion -> no_condicional .

    ID              reduce using rule 66 (repeticion -> no_condicional .)
    READ            reduce using rule 66 (repeticion -> no_condicional .)
    WRITE           reduce using rule 66 (repeticion -> no_condicional .)
    IF              reduce using rule 66 (repeticion -> no_condicional .)
    RETURN          reduce using rule 66 (repeticion -> no_condicional .)
    WHILE           reduce using rule 66 (repeticion -> no_condicional .)
    FOR             reduce using rule 66 (repeticion -> no_condicional .)
    }               reduce using rule 66 (repeticion -> no_condicional .)


state 62

    (68) no_condicional -> FOR . variable = hyper_exp TO hyper_exp DO { loop_estatuto }
    (8) variable -> . ID np_single_var_process

    ID              shift and go to state 86

    variable                       shift and go to state 85

state 63

    (40) estatuto -> read .

    ID              reduce using rule 40 (estatuto -> read .)
    READ            reduce using rule 40 (estatuto -> read .)
    WRITE           reduce using rule 40 (estatuto -> read .)
    IF              reduce using rule 40 (estatuto -> read .)
    RETURN          reduce using rule 40 (estatuto -> read .)
    WHILE           reduce using rule 40 (estatuto -> read .)
    FOR             reduce using rule 40 (estatuto -> read .)
    }               reduce using rule 40 (estatuto -> read .)


state 64

    (64) loop_estatuto -> epsilon .

    }               reduce using rule 64 (loop_estatuto -> epsilon .)


state 65

    (65) repeticion -> condicional .

    ID              reduce using rule 65 (repeticion -> condicional .)
    READ            reduce using rule 65 (repeticion -> condicional .)
    WRITE           reduce using rule 65 (repeticion -> condicional .)
    IF              reduce using rule 65 (repeticion -> condicional .)
    RETURN          reduce using rule 65 (repeticion -> condicional .)
    WHILE           reduce using rule 65 (repeticion -> condicional .)
    FOR             reduce using rule 65 (repeticion -> condicional .)
    }               reduce using rule 65 (repeticion -> condicional .)


state 66

    (57) write -> WRITE . ( hyper_exp_loop ) ;

    (               shift and go to state 87


state 67

    (45) asignacion -> variable . = hyper_exp ;

    =               shift and go to state 88


state 68

    (58) decision -> IF . ( hyper_exp ) np_decision_1 THEN { loop_estatuto } decision_else

    (               shift and go to state 89


state 69

    (38) estatuto -> asignacion .

    ID              reduce using rule 38 (estatuto -> asignacion .)
    READ            reduce using rule 38 (estatuto -> asignacion .)
    WRITE           reduce using rule 38 (estatuto -> asignacion .)
    IF              reduce using rule 38 (estatuto -> asignacion .)
    RETURN          reduce using rule 38 (estatuto -> asignacion .)
    WHILE           reduce using rule 38 (estatuto -> asignacion .)
    FOR             reduce using rule 38 (estatuto -> asignacion .)
    }               reduce using rule 38 (estatuto -> asignacion .)


state 70

    (44) estatuto -> func_return .

    ID              reduce using rule 44 (estatuto -> func_return .)
    READ            reduce using rule 44 (estatuto -> func_return .)
    WRITE           reduce using rule 44 (estatuto -> func_return .)
    IF              reduce using rule 44 (estatuto -> func_return .)
    RETURN          reduce using rule 44 (estatuto -> func_return .)
    WHILE           reduce using rule 44 (estatuto -> func_return .)
    FOR             reduce using rule 44 (estatuto -> func_return .)
    }               reduce using rule 44 (estatuto -> func_return .)


state 71

    (43) estatuto -> repeticion .
